# subdivx-download

./: HISTORY.md  README.md  README.rst  cli.py  pyproject.toml  setup.py  subdivx-download.py  subdivx.py
subdivx/: cli.py  lib.py
subdivx_download/: retriever.py  smarter.py  subdivxlib.py
